# hackaton-IAporelfuturo

./: .env.sample  README.md  pyproject.toml
src/: app.py  utils.py
